syntax = "proto3";

message MessageRoomSession {
	repeated  string sessions = 1;//直播间已存在的session
}
 